fix: overflow в modal

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -10,7 +10,7 @@
 
   .modal::before {
     content: '';
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
